syntax = "proto3";

package pb;

service StringService{
    rpc Diff(StringRequest) returns (StringResponse){}
}

message StringRequest {
    string a = 1;
    string b = 2;
}

message StringResponse {
    string result = 1;
    string err = 2;
}